--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,8 @@
   />
   <link href="https://fonts.googleapis.com/css?family=Geostar&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Butcherman&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fascinate&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Londrina+Shadow&display=swap" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
